# NoteWeaver

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/weave/: dedup.py  pipeline.py  writing.py
tests/: __init__.py  test_parsing.py
weave/: __main__.py  cleaning.py  cli.py  config.py  parsing.py
